# mcp-server

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  STARTUP_GUIDE.md  agents.md  debug_contract_flow.py  debug_fastmcp_repro.py  debug_logging.py  debug_output.txt  debug_output_2.txt  debug_output_3.txt  debug_output_4.txt  debug_parser.py  debug_roots.py  docker-compose.yml  extract_test_text.py  extracted_text.txt  fetch_raw_contract.py  pyproject.toml  test_contract.txt  test_resources.py  test_resources_detailed.py
docs/: API_CLIENT_REFACTORING.md  CONTRACT_TOOLS.md  DEPLOYMENT.md  DOCUMENT_ATTACHMENT.md  DOCUMENT_ATTACHMENT_QUICKREF.md  STARTUP_GUIDE.md  WORKFLOW_GIT.md  architecture.md
examples/: document_attachment_example.py
scripts/: test_streamable_client.py
src/: test_list_folders.py
src/glpi_mcp_server/: __init__.py  server.py
src/glpi_mcp_server.egg-info/: SOURCES.txt  requires.txt
src/glpi_mcp_server/auth/: __init__.py  oauth_client.py
src/glpi_mcp_server/config/: settings.py
src/glpi_mcp_server/glpi/: api_client.py  contracts.py  documents.py  invoices.py  models.py  tickets.py
src/glpi_mcp_server/llm/: factory.py  strategies.py
src/glpi_mcp_server/processors/: base_processor.py  contract_processor.py  document_parser.py  invoice_processor.py  utils.py
src/glpi_mcp_server/prompts/: slash_commands.py  workflow_prompts.py
src/glpi_mcp_server/resources/: glpi_resources.py
tests/: test_auth.py  test_folder_tools.py  test_glpi_api.py  test_processors.py  test_tools.py
(+8 files in other folders)
